workspace/texel/logs/django.log
Not Found: /favicon.ico
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Internal Server Error: /admin/r/19/1/
Traceback (most recent call last):
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/core/handlers/base.py", line 99, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/core/urlresolvers.py", line 337, in resolve
    for pattern in self.url_patterns:
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/core/urlresolvers.py", line 365, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/core/urlresolvers.py", line 360, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/utils/importlib.py", line 40, in import_module
    __import__(name)
  File "/home/theo/acaciadata.com/workspace/texel/texel/urls.py", line 6, in <module>
    from views import HomeView
  File "/home/theo/acaciadata.com/workspace/texel/texel/views.py", line 8, in <module>
    from acacia.data.views import ProjectDetailView
  File "/home/theo/acaciadata.com/acacia/acacia/data/views.py", line 238
    'chart': {'animation': False,
          ^
SyntaxError: invalid syntax
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/
Internal Server Error: /admin/data/formula/
Traceback (most recent call last):
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/core/handlers/base.py", line 112, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/contrib/admin/options.py", line 432, in wrapper
    return self.admin_site.admin_view(view)(*args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/utils/decorators.py", line 99, in _wrapped_view
    response = view_func(request, *args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/views/decorators/cache.py", line 52, in _wrapped_view_func
    response = view_func(request, *args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/contrib/admin/sites.py", line 198, in inner
    return view(request, *args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/utils/decorators.py", line 29, in _wrapper
    return bound_func(*args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/utils/decorators.py", line 99, in _wrapped_view
    response = view_func(request, *args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/utils/decorators.py", line 25, in bound_func
    return func(self, *args2, **kwargs2)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/contrib/admin/options.py", line 1347, in changelist_view
    response = self.response_action(request, queryset=cl.get_queryset(request))
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/contrib/admin/options.py", line 1084, in response_action
    response = func(self, request, queryset)
  File "/home/theo/acaciadata.com/acacia/acacia/data/actions.py", line 70, in replace_series
    s.replace()
  File "/home/theo/acaciadata.com/acacia/acacia/data/models.py", line 798, in replace
    self.create()
  File "/home/theo/acaciadata.com/acacia/acacia/data/models.py", line 771, in create
    series = self.get_series_data(data)
  File "/home/theo/acaciadata.com/acacia/acacia/data/models.py", line 990, in get_series_data
    variables = self.get_variables()
  File "/home/theo/acaciadata.com/acacia/acacia/data/models.py", line 979, in get_variables
    start = [v.ix[0] for k,v in variables]
ValueError: too many values to unpack
Internal Server Error: /admin/data/formula/
Traceback (most recent call last):
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/core/handlers/base.py", line 112, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/contrib/admin/options.py", line 432, in wrapper
    return self.admin_site.admin_view(view)(*args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/utils/decorators.py", line 99, in _wrapped_view
    response = view_func(request, *args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/views/decorators/cache.py", line 52, in _wrapped_view_func
    response = view_func(request, *args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/contrib/admin/sites.py", line 198, in inner
    return view(request, *args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/utils/decorators.py", line 29, in _wrapper
    return bound_func(*args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/utils/decorators.py", line 99, in _wrapped_view
    response = view_func(request, *args, **kwargs)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/utils/decorators.py", line 25, in bound_func
    return func(self, *args2, **kwargs2)
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/contrib/admin/options.py", line 1347, in changelist_view
    response = self.response_action(request, queryset=cl.get_queryset(request))
  File "/home/theo/acaciadata.com/django/local/lib/python2.7/site-packages/django/contrib/admin/options.py", line 1084, in response_action
    response = func(self, request, queryset)
  File "/home/theo/acaciadata.com/acacia/acacia/data/actions.py", line 70, in replace_series
    s.replace()
  File "/home/theo/acaciadata.com/acacia/acacia/data/models.py", line 798, in replace
    self.create()
  File "/home/theo/acaciadata.com/acacia/acacia/data/models.py", line 771, in create
    series = self.get_series_data(data)
  File "/home/theo/acaciadata.com/acacia/acacia/data/models.py", line 991, in get_series_data
    variables = self.get_variables()
  File "/home/theo/acaciadata.com/acacia/acacia/data/models.py", line 979, in get_variables
    start = [v.index.to_pydatetime().min() for v in variables.values()].max()
AttributeError: 'list' object has no attribute 'max'
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
Not Found: /media/proef-zoetwaterberging/texel/hoofdperceel/thumbnails/uurwaarden-meteostation-vlieland/series/rh.png
